# reqtrace

./: .gitignore  .pre-commit-config.yaml  .tags  Cargo.toml  DESIGN.md  FORMATS.md  README.md  REQUIREMENTS.md  TODO.md  build.ninja  flake.nix  hitchhiker.md  new_data_test.sh  requirements.json  requirements.toml
doc/requirements/: ARCHITECTURE.md  DESIGN.md  FORMATS.md  REQUIREMENTS.md  unsafe_reasoning.md
examples/: unsafe.rs  unsafe_reasoning.md
reports/: tmx.json  tmx.md
src/: aggregator.rs  common.rs  controller.rs  errors.rs  formatters.rs  genericvalue.rs  graph.rs  lib.rs  main.rs  markdown.rs  models.rs  parsers.rs  pool.rs  stringvault.rs  trace.rs  tracer.rs  util.rs
src/formatters/: common.rs  gnuerr.rs  markdown.rs  mod.rs  serialize.rs  tags.rs
src/parsers/: markdown.rs  mod.rs  monoreq.rs  readme.rs  rust.rs  rust_cov_mark.rs
tests/: controller_returns_job_return_code.rs  data_tests.rs  parse_all_artefacts.rs
tests/controller_returns_job_return_code/: config.toml
tests/data/artefact_read_err/: config.toml
tests/data/artefact_read_err/expected/: tmx.md
tests/data/continue_parsing_after_errors/: config.toml  lower.md  upper.md
tests/data/continue_parsing_after_errors/expected/: tmx.md
tests/data/reference_without_title/: config.toml  lower_numeric.md  lower_readable.md  upper_numeric.md  upper_readable.md
tests/data/reference_without_title/expected/: tmx.md
tests/data/requirement_twice_in_1_artefact/: config.toml  upper.md
tests/data/requirement_twice_in_1_artefact/expected/: tmx.md
tests/data/requirement_twice_in_2_artefacts/: config.toml  lower.md  upper.md
tests/data/requirement_twice_in_2_artefacts/expected/: tmx.md
tests/data/trace_down/: config.toml  lower.md  upper.md
tests/data/trace_down/expected/: tmx.md
tests/data/trace_up/: config.toml  lower.md  upper.md
tests/data/trace_up/expected/: tmx.md
tests/parse_all_artefacts/: a1.json  a2.json  config.toml  readme.md
tests/parse_all_artefacts/expected/: requirements.json
tests/utils/: mod.rs
