[package]
name = "reqtrace"
version = "0.1.0"
authors = ["Wonko <wonko@hanstool.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# config, caching
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"

# config
toml = "0.5"
structopt = "0.3"

# error handling / logging
thiserror = "1.0"
log = "0.4.0"
env_logger = "0.9"

# parsing
regex = "1.5"
lazy_static = "1.4"

# parsing rust
syn = { version="1.0", features = ["parsing", "full", "extra-traits", "visit", "printing"]}
proc-macro2 = {version = "1.0", features = ["span-locations"] }
quote = "1.0"

# unit testing / tracing
cov-mark = "1.1"
